Add generated pack recovery lifecycle